--- a/gcmapp/Base.lproj/Main.storyboard
+++ b/gcmapp/Base.lproj/Main.storyboard
@@ -27,6 +27,13 @@
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="M1m-ba-dfv">
+                                <rect key="frame" x="16" y="53" width="391" height="21"/>
+                                <string key="text">Press and hold marker, then drag to new location...
+</string>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                             <textField opaque="NO" clipsSubviews="YES" alpha="0.89999999999999991" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Search" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="MGx-9I-4b0">
                                 <rect key="frame" x="16" y="73" width="568" height="30"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
@@ -74,6 +81,7 @@
                             <constraint firstItem="sgC-7Q-x6J" firstAttribute="leading" secondItem="tsR-hK-woN" secondAttribute="leadingMargin" id="3Ma-1s-eMh"/>
                             <constraint firstAttribute="trailingMargin" secondItem="Rq4-jW-iIS" secondAttribute="trailing" id="55x-PA-2sh"/>
                             <constraint firstItem="sgC-7Q-x6J" firstAttribute="trailing" secondItem="tsR-hK-woN" secondAttribute="trailingMargin" constant="5" id="8zY-C3-n7e"/>
+                            <constraint firstItem="M1m-ba-dfv" firstAttribute="leading" secondItem="tsR-hK-woN" secondAttribute="leadingMargin" id="9J9-og-qMO"/>
                             <constraint firstItem="sgC-7Q-x6J" firstAttribute="top" secondItem="Ia1-K6-d13" secondAttribute="bottom" id="9fv-4l-vj1"/>
                             <constraint firstItem="MGx-9I-4b0" firstAttribute="top" secondItem="sgC-7Q-x6J" secondAttribute="bottom" constant="20" id="APJ-Fj-mlu"/>
                             <constraint firstItem="Rq4-jW-iIS" firstAttribute="top" secondItem="MGx-9I-4b0" secondAttribute="bottom" id="Bqi-di-V3j"/>
@@ -81,6 +89,7 @@
                             <constraint firstItem="hll-KI-DZs" firstAttribute="leading" secondItem="tsR-hK-woN" secondAttribute="leading" id="DDv-9a-Wln"/>
                             <constraint firstAttribute="trailing" secondItem="Fs7-fT-GKb" secondAttribute="trailing" id="EbX-ZW-KAD"/>
                             <constraint firstItem="hll-KI-DZs" firstAttribute="leading" secondItem="tsR-hK-woN" secondAttribute="leading" id="IIg-9w-scj"/>
+                            <constraint firstItem="M1m-ba-dfv" firstAttribute="top" secondItem="sgC-7Q-x6J" secondAttribute="bottom" id="R0g-wA-ThH"/>
                             <constraint firstItem="hll-KI-DZs" firstAttribute="top" secondItem="Ia1-K6-d13" secondAttribute="bottom" id="U1Y-ra-Y1g"/>
                             <constraint firstAttribute="trailing" secondItem="hll-KI-DZs" secondAttribute="trailing" id="V8S-cI-Hid"/>
                             <constraint firstItem="Rq4-jW-iIS" firstAttribute="leading" secondItem="tsR-hK-woN" secondAttribute="leadingMargin" id="Vev-Xp-RH1"/>
@@ -90,6 +99,7 @@
                             <constraint firstItem="MGx-9I-4b0" firstAttribute="top" secondItem="Rq4-jW-iIS" secondAttribute="bottom" id="YED-Rf-Rd2"/>
                             <constraint firstItem="hll-KI-DZs" firstAttribute="leading" secondItem="tsR-hK-woN" secondAttribute="leading" id="ZZs-LO-IC7"/>
                             <constraint firstAttribute="trailingMargin" secondItem="sgC-7Q-x6J" secondAttribute="trailing" id="d5J-oC-px7"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="M1m-ba-dfv" secondAttribute="trailing" constant="182" id="dmo-8k-LUy"/>
                             <constraint firstAttribute="trailingMargin" secondItem="MGx-9I-4b0" secondAttribute="trailing" id="jZP-fl-phs"/>
                             <constraint firstAttribute="bottom" secondItem="hll-KI-DZs" secondAttribute="bottom" id="mZu-pR-P6C"/>
                             <constraint firstItem="4ug-Mw-9AY" firstAttribute="top" secondItem="Fs7-fT-GKb" secondAttribute="bottom" id="zgo-yQ-Qsx"/>
@@ -103,6 +113,7 @@
                                 <exclude reference="ZZs-LO-IC7"/>
                                 <exclude reference="8zY-C3-n7e"/>
                                 <exclude reference="WDH-a0-lZb"/>
+                                <exclude reference="dmo-8k-LUy"/>
                                 <exclude reference="YED-Rf-Rd2"/>
                             </mask>
                         </variation>
@@ -111,6 +122,7 @@
                     <connections>
                         <outlet property="autocompleteTableView" destination="Rq4-jW-iIS" id="10I-4J-37B"/>
                         <outlet property="lblMinistry" destination="sgC-7Q-x6J" id="7rb-hg-FAY"/>
+                        <outlet property="lblMove" destination="M1m-ba-dfv" id="8qk-io-jrB"/>
                         <outlet property="mapView" destination="hll-KI-DZs" id="aLP-8a-9zV"/>
                         <outlet property="searchMap" destination="MGx-9I-4b0" id="QM2-2a-WAS"/>
                         <segue destination="3jf-lV-Z8g" kind="presentation" identifier="trainingDetail" modalPresentationStyle="currentContext" id="VzV-QX-yED"/>
@@ -420,13 +432,6 @@
                                         <action selector="btnMove:" destination="rFH-B2-aUp" eventType="touchUpInside" id="9No-ev-JtD"/>
                                     </connections>
                                 </button>
-                                <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="HMN-Xi-6Rf">
-                                    <rect key="frame" x="240" y="37" width="126" height="30"/>
-                                    <state key="normal" title="Set Parent Church"/>
-                                    <connections>
-                                        <action selector="btnSetParent:" destination="rFH-B2-aUp" eventType="touchUpInside" id="TO2-5a-iee"/>
-                                    </connections>
-                                </button>
                                 <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="XEH-ih-ZBy">
                                     <rect key="frame" x="78" y="37" width="40" height="30"/>
                                     <state key="normal" title="Close"/>
@@ -572,6 +577,29 @@
                                     <segue destination="Nkj-KB-yxH" kind="showDetail" identifier="ShowSecurity" id="QtU-rZ-2lM"/>
                                 </connections>
                             </tableViewCell>
+                            <tableViewCell contentMode="scaleToFill" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" reuseIdentifier="ParentCell" textLabel="P7R-rZ-INg" detailTextLabel="2jP-cL-Ung" style="IBUITableViewCellStyleValue1" id="ddR-dK-F2u">
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="ddR-dK-F2u" id="ncM-bQ-0Gw">
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Parent" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="P7R-rZ-INg">
+                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                                            <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Detail" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="2jP-cL-Ung">
+                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                                            <color key="textColor" red="0.5568627451" green="0.5568627451" blue="0.57647058819999997" alpha="1" colorSpace="calibratedRGB"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                    </subviews>
+                                </tableViewCellContentView>
+                                <connections>
+                                    <segue destination="X5A-Ft-obS" kind="showDetail" identifier="ShowParent" id="d5Y-wF-fNE"/>
+                                </connections>
+                            </tableViewCell>
                         </prototypes>
                         <sections/>
                         <connections>
@@ -685,6 +713,70 @@
             </objects>
             <point key="canvasLocation" x="2913" y="-856"/>
         </scene>
+        <!--ParentTVC-->
+        <scene sceneID="VkV-Wv-Bup">
+            <objects>
+                <tableViewController id="X5A-Ft-obS" customClass="ParentTVC" customModule="gcmapp" customModuleProvider="target" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="YpQ-TE-ftw">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <view key="tableHeaderView" contentMode="scaleToFill" id="PY8-rQ-lui">
+                            <rect key="frame" x="0.0" y="0.0" width="600" height="44"/>
+                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <subviews>
+                                <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="FQZ-hd-rB0">
+                                    <rect key="frame" x="8" y="6" width="49" height="30"/>
+                                    <state key="normal" title="&lt; Back">
+                                        <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                    </state>
+                                    <connections>
+                                        <action selector="btnBack:" destination="X5A-Ft-obS" eventType="touchUpInside" id="ut1-3H-rXt"/>
+                                    </connections>
+                                </button>
+                            </subviews>
+                            <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        </view>
+                        <prototypes>
+                            <tableViewCell contentMode="scaleToFill" selectionStyle="gray" indentationWidth="10" reuseIdentifier="ParentListCell" textLabel="80C-F8-Pal" style="IBUITableViewCellStyleDefault" id="YX3-1A-nnJ">
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="YX3-1A-nnJ" id="Cxx-5C-xgl">
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Title" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="80C-F8-Pal">
+                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                                            <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                    </subviews>
+                                </tableViewCellContentView>
+                            </tableViewCell>
+                            <tableViewCell contentMode="scaleToFill" selectionStyle="gray" accessoryType="checkmark" indentationWidth="10" reuseIdentifier="ParentSelectedCell" textLabel="dxO-4l-Eb2" style="IBUITableViewCellStyleDefault" id="CiL-xH-Eo8">
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="CiL-xH-Eo8" id="ZZZ-MK-bSM">
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Title" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="dxO-4l-Eb2">
+                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                            <fontDescription key="fontDescription" type="boldSystem" pointSize="16"/>
+                                            <color key="textColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                    </subviews>
+                                </tableViewCellContentView>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="X5A-Ft-obS" id="iK6-L8-V41"/>
+                            <outlet property="delegate" destination="X5A-Ft-obS" id="nPz-wo-SUf"/>
+                        </connections>
+                    </tableView>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="YLP-Me-DV2" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2314" y="7"/>
+        </scene>
         <!--SecurityTVC-->
         <scene sceneID="luT-Li-N7f">
             <objects>
@@ -785,7 +877,7 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="CvJ-qo-rt2" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2602" y="-237"/>
+            <point key="canvasLocation" x="3184" y="-105"/>
         </scene>
         <!--Settings View Controller-->
         <scene sceneID="FMv-yo-qls">
